# ozdna-com

./: .gitignore  404.html  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH-0TL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SITE.md  ai.txt  analytics.js  index.html  llms-full.txt  llms.txt  main.js  netlify.toml  ozdna-homepage.html  package-lock.json  package.json  robots.txt  sitemap.xml  styles.css  success.html
complydna/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
complydna/app/: __init__.py  config.py  main.py  version.py
complydna/app/api/: audit.py  deps.py  rate_limit.py  schemas.py
complydna/app/models/: __init__.py  legislation.py
complydna/app/observability/: __init__.py  posthog_otel.py
complydna/app/parsing/: __init__.py  ingest_io.py  legislation_parser.py
complydna/app/services/: answerer.py  embedding_backends.py  embeddings.py  llm_openai.py  llm_stub.py  qdrant_client.py  qdrant_payload.py  retriever.py
complydna/data/parsed/: LAW-5549.jsonl  LAW-6415.jsonl  (+1 more)
complydna/evals/: cli.py  golden_set.jsonl  metrics.py  models.py  pilot_set.jsonl  run.py  runner.py
complydna/scripts/: ingest.py  pilot_demo.py
complydna/tests/: test_answerer.py  test_ask_api.py  test_corpus.py  test_demo_ui.py  test_evals.py  test_health.py  test_indexer.py  test_ingest.py  test_legislation.py  test_llm_openai.py  test_pilot_demo.py  test_posthog_otel.py  test_qdrant_client.py  test_retriever.py  test_version.py
complydna/web/: app.js  index.html  styles.css
sdk/: sdk.js  (+1 more)
(+199 files in other folders)
