[project]
name = "complydna"
version = "0.1.0"
description = "ComplyDNA — Turkish regulatory compliance RAG with cited answers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.28.0",
    "openai>=2.0.0",
    "opentelemetry-sdk>=1.43.0",
    "posthog[otel]>=7.22.0",
    "opentelemetry-instrumentation-openai-v2>=2.4b0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires local Qdrant and downloads bge-m3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"evals/run.py" = ["E402"]
